# IndexTTS-Workflow-Studio

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  BETA_TERMS.md  CONTRIBUTING.md  DIALOGUE_GENERATION_PROMPT.md  DISCLAIMER  DISCLAIMER_EN.md  GRADIO_UI_GUIDE.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app_context.py  audio_utils.py  collect-diagnostics.bat  constants.py  docker-compose.gpu.yml  docker-compose.yml  general_utils.py  pyproject.toml  requirements.txt  selected_seeds.json  start.bat  stop.bat  test_syntax.py  tts_api.py  ui_layout.py  ui_logic.py  webui.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  feedback.yml  setup-help.yml
backend/: __init__.py  main.py
backend/api/: __init__.py  config.py  exceptions.py  models.py
backend/indextts/: cli.py  infer.py  infer.py.backup  infer_v2.py
backend/scripts/: batch_prepare_existing_speakers.py  parse_listening_feedback.py  quality_benchmark.py
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  backend-entrypoint.sh  docker-compose.yml  download_models.py  logs.bat  nginx.conf  start.bat  stop.bat
docs/: INDEXTTS2_PROMPTING_GUIDE.md  README.md  SCRIPT_CANVAS_AUTHORING_GUIDE.md  SFX_AMBIENCE_MUSIC_SMOKE_TEST.md  USER_MANUAL.md
docs/api/: API_README.md
docs/archive/: README.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/manual/: USER_MANUAL.md
docs/project/: KNOWN_LIMITATIONS.md  REDDIT_FOLLOWUP_DEMO_PLAN_2026-04.md  RELEASE_HYGIENE_CHECKLIST.md  RELEASE_READINESS_STATUS.md  V1_TO_V2_PARITY_CHECKLIST.md
docs/research/: INDEXTTS2_DIALOGUE_GENERATION_SYSTEM_PROMPT.md  INDEXTTS2_SCRIPTING_PLAYBOOK.md  INDEXTTS2_VOICE_FIDELITY_RESEARCH_SYNTHESIS_NEXT_ACTIONS.md  LISTENING_FEEDBACK_SYNTAX.md
docs/testing/: README.md  test-run-log-template.md
docs/timeline/: README.md
examples/: example_conversation_project.json  example_listening_feedback.txt
frontend/: README.md  index.html
frontend/src/: app.js  custom-media-player.js
indextts/: __init__.py  cli.py  infer.py
indextts/utils/: front.py
media/audio-examples/: README.md
samples/try-this-first/: blackmere-road-45s.md
shared/: README.md
shared/audio/: README.md
test_scripts/: absurd_garden_parody.md  audiobook_night_train_demo_pack.md  dark_garden_parody.md  flower_crisis_parody_timeline_pack.md  game_dialogue_checkpoint_breach_pack.md  overlap_planning_template.md  podcast_roundtable_demo_pack.md
tools/: audit_private_assets.ps1  restore_speaker_backup.ps1  webui.py
(+150 files in other folders)
